# bfsupport

./: .clang-format  CMakeLists.txt
crt/: CMakeLists.txt  crt.cpp
dummy_lib1/: CMakeLists.txt
dummy_lib2/: CMakeLists.txt
dummy_main/: CMakeLists.txt  dummy_main.cpp
include/: dummy_libs.h
pthread/: CMakeLists.txt  pthread.cpp
syscall/: CMakeLists.txt  syscall.cpp
